# Giga-graphic-ui

./: .gitignore  platformio.ini
lib/: CMakeLists.txt  ui.c  ui.h  ui_events.c  ui_events.cpp  ui_events.h
lib/BMP-sensor/: BMPsensor.h
lib/SquarlineUI/: ui.c  ui.h  ui_events.c  ui_events.cpp  ui_events.h
lib/SquarlineUI/screens/: ui_Screen1.c
lib/Squarlinelib/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h
lib/Squarlinelib/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_sidebar.c  ui_comp_sidebar.h
lib/Squarlinelib/images/: ui_img_1080249043.c  ui_img_1704086984.c  ui_img_1714697232.c  ui_img_577774466.c  ui_img_815904853.c  ui_img_877206327.c  ui_img_add_png.c  ui_img_lightbulb_png.c  ui_img_screenshot_png.c
lib/Squarlinelib/screens/: ui_Screen1.c  ui_Screen2.c
lib/components/: ui_comp.h  ui_comp_hook.h  ui_comp_sidebar.c  ui_comp_sidebar.h
lib/images/: ui_img_1080249043.c  ui_img_1704086984.c  ui_img_1714697232.c  ui_img_815904853.c  ui_img_877206327.c  ui_img_add_png.c  ui_img_lightbulb_png.c  ui_img_screenshot_png.c
lib/screens/: ui_Screen1.c  ui_Screen2.c
src/: main.cpp
